src/ui/snapshots/lssub__ui__main_widget__tests__account_screen_logged_in.snap
---
source: src/ui/app.rs
expression: terminal.backend()
---
"┌ Account ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                         ┌──────────────────────────────────────────────┐                         │"
"│                         │                Username: user                │                         │"
"│                         │                  Level: vip                  │                         │"
"│                         │             Allowed downloads: 10            │                         │"
"│                         │              Downloads count: 4              │                         │"
"│                         │            Remaining downloads: 6            │                         │"
"│                         │                                              │                         │"
"│                         │                                              │                         │"
"│                         │                                              │                         │"
"│                         └──────────────────────────────────────────────┘                         │"
"│                                            Logout [Ctrl+O]  Cancel [Esc]                         │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Status ───────────────────────────────────────────────────────────────────┐┌ Downloads remaining ┐"
"│                                                                           ││       6 of 10       │"
"└───────────────────────────────────────────────────────────────────────────┘└─────────────────────┘"
"         F1: Help | F2: Search | F3: Account (user) | F4: Languages | F10: Exit | F12: About        "
