src/ui/snapshots/lssub__ui__main_widget__tests__main_screen_help.snap
---
source: src/ui/main_widget.rs
expression: terminal.backend()
---
"┌ Search ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Results: 0 ──────────────────────────────────────────────────────────────────────────────────────┐"
"│Title           Language   Year       Uploaded     Uploader     Downloads    AI         Votes     │"
"│                  ┌ Help ───────────────────────────────────────────────────────┐                 │"
"│                  │                                                             │                 │"
"│                  │Ctrl+P: Narrow results to TV series currently selected       │                 │"
"│                  │Ctrl+S: Narrow results to the single title currently selected│                 │"
"│                  │Ctrl+T: Exclude AI translated subtitles                      │                 │"
"│                  │                                                             │                 │"
"│                  └─────────────────────────────────────────────────────────────┘                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Status ───────────────────────────────────────────────────────────────────┐┌ Downloads remaining ┐"
"│                                                                           ││       0 of 0        │"
"└───────────────────────────────────────────────────────────────────────────┘└─────────────────────┘"
"            F1: Help | F2: Search | F3: Account | F4: Languages | F10: Exit | F12: About            "
