src/ui/snapshots/lssub__ui__main_widget__tests__main_screen_logged_in.snap
---
source: src/ui/main_widget.rs
expression: terminal.backend()
---
"┌ Search ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Results: 0 ──────────────────────────────────────────────────────────────────────────────────────┐"
"│Title           Language   Year       Uploaded     Uploader     Downloads    AI         Votes     │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Status ───────────────────────────────────────────────────────────────────┐┌ Downloads remaining ┐"
"│                                                                           ││       6 of 10       │"
"└───────────────────────────────────────────────────────────────────────────┘└─────────────────────┘"
"         F1: Help | F2: Search | F3: Account (user) | F4: Languages | F10: Exit | F12: About        "
