src/ui/snapshots/lssub__ui__main_widget__tests__subs_fetched.snap
---
source: src/ui/app.rs
expression: terminal.backend()
---
"┌ Search ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Results: 2 ──────────────────────────────────────────────────────────────────────────────────────↑"
"│Title                        Language   Year       Uploaded     Downloads    AI         Votes     █"
"│release                      en         2004       2024-04-24   12           ✓          8         █"
"│release 2                    pl                    2014-04-24   22                                █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  ║"
"└──────────────────────────────────────────────────────────────────────────────────────────────────↓"
"┌ Status ───────────────────────────────────────────────────────────────────┐┌ Downloads remaining ┐"
"│                                                                           ││       0 of 0        │"
"└───────────────────────────────────────────────────────────────────────────┘└─────────────────────┘"
"            F1: Help | F2: Search | F3: Account | F4: Languages | F10: Exit | F12: About            "
