src/ui/snapshots/lssub__ui__main_widget__tests__subs_query.snap
---
source: src/ui/main_widget.rs
expression: terminal.backend()
---
"┌ Search ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│title                                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Results: 1 ──────────────────────────────────────────────────────────────────────────────────────↑"
"│Title           Language   Year       Uploaded     Uploader     Downloads    AI         Votes     █"
"│release         en         2004       2024-04-24                12           ✓          8         █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"│                                                                                                  █"
"└──────────────────────────────────────────────────────────────────────────────────────────────────↓"
"┌ Status ───────────────────────────────────────────────────────────────────┐┌ Downloads remaining ┐"
"│                                                                           ││       0 of 0        │"
"└───────────────────────────────────────────────────────────────────────────┘└─────────────────────┘"
"            F1: Help | F2: Search | F3: Account | F4: Languages | F10: Exit | F12: About            "
